--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
-include COPYING MANIFEST MANIFEST.in README trimage
+include COPYING MANIFEST MANIFEST.in README optimgaika
 recursive-include desktop *.svg *.desktop
 recursive-include src/ *.py *.png
 
