--- a/debian/control
+++ b/debian/control
@@ -1,20 +1,20 @@
-Source: trimage
+Source: optimgaika
 Section: graphics
 Priority: optional
 Maintainer: Mikhail Novosyolov <mikhailnov@dumalogiya.ru>
 Build-Depends: debhelper (>=7), dh-python, python
 XS-Python-Version: >=2.6
 Standards-Version: 3.9.1
-Homepage: http://trimage.org
+Homepage: http://optimgaika.org
 
-Package: trimage
+Package: optimgaika
 Architecture: all
 Depends: ${misc:Depends}, ${python:Depends}, python-qt4 (>=4.4), optipng (>=0.6.2.1), advancecomp (>=1.15), guetzli, pngcrush (>=1.6.7)
 XB-Python-Version: ${python:Versions}
 Description: GUI and command-line interface to optimize image files
- Trimage is a cross-platform GUI and command-line interface to optimize image
+ Optimgaika is a cross-platform GUI and command-line interface to optimize image
  files via optipng, advpng, pngcrush and guetzli, depending on the filetype
  (currently, PNG and JPG files are supported). All image files are losslessly
- compressed on the highest available compression levels. Trimage gives you
+ compressed on the highest available compression levels. Optimgaika gives you
  various input functions to fit your own workflow: A regular file dialog,
  dragging and dropping and various command line options.
